force-app/main/default/objects/ssot__ConversationEntry__dlm/fields/ssot__ClientDateTime__c.field-meta.xml
<CustomField>
    <fullName>ssot__ClientDateTime__c</fullName>
    <label>Client DateTime</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ClientDateTime</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>