force-app/main/default/objects/ssot__ConversationEntry__dlm/fields/ssot__ConversationEntrySequenceNumber__c.field-meta.xml
<CustomField>
    <fullName>ssot__ConversationEntrySequenceNumber__c</fullName>
    <label>Conversation Entry Sequence</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ConversationEntrySequenceNumber</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>