force-app/main/default/objects/ssot__ConversationEntry__dlm/fields/ssot__ConversationEntryType__c.field-meta.xml
<CustomField>
    <fullName>ssot__ConversationEntryType__c</fullName>
    <label>Conversation Entry Type</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ConversationEntryType</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>