force-app/main/default/objects/ssot__ConversationEntry__dlm/fields/ssot__DurationSecondsCount__c.field-meta.xml
<CustomField>
    <fullName>ssot__DurationSecondsCount__c</fullName>
    <label>Duration Seconds</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>DurationSecondsCount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>