force-app/main/default/objects/ssot__ConversationEntry__dlm/fields/ssot__EngagementParticipantId__c.field-meta.xml
<CustomField>
    <fullName>ssot__EngagementParticipantId__c</fullName>
    <label>Engagement Participant</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>EngagementParticipantId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>