force-app/main/default/objects/ssot__ConversationEntry__dlm/fields/ssot__isExternallyVisible__c.field-meta.xml
<CustomField>
    <fullName>ssot__isExternallyVisible__c</fullName>
    <label>is Externally Visible</label>
    <length>5</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>isExternallyVisible</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>