force-app/main/default/objects/ssot__ConversationEntry__dlm/fields/ssot__rel_1702009488641_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1702009488641_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ConversationEntry_ConversationId_map_rel</label>
    <referenceTo>ssot__Conversation__dlm</referenceTo>
    <relationshipLabel>ConversationEntry_ConversationId_map_rel</relationshipLabel>
    <relationshipName>rel_1702009488641_end</relationshipName>
    <type>Lookup</type>
</CustomField>