force-app/main/default/objects/ssot__ConversationEntry__dlm/fields/ssot__TranscriptedDateTime__c.field-meta.xml
<CustomField>
    <fullName>ssot__TranscriptedDateTime__c</fullName>
    <label>Transcripted DateTime</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>TranscriptedDateTime</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>